fix docs serving
